codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_includes_hostname_items.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 100)"
---
                                                                                                    
  Configure Status Line                                                                             
  Select which items to display in the status line.                                                 
                                                                                                    
  Type to search                                                                                    
  >                                                                                                 
› [x] Use theme colors      Apply colors from the active /theme                                     
  ───────────────────────                                                                           
  [x] hostname              System hostname without domain suffix                                   
  [x] host                  Full system hostname                                                    
  [ ] model                 Current model name                                                      
  [ ] model-with-reasoning  Current model name with reasoning level                                 
  [ ] reasoning             Current reasoning level                                                 
  [ ] current-dir           Current working directory                                               
                                                                                                    
  builder-01 · builder-01.ci.example.com                                                            
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
